<resources>
    <string name="app_name">Grab Bag</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_nav">Current Games</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_log_out">Log out</string>
    <string name="action_join_game">Join Game</string>
    <string name="action_create_game">Create Game</string>
    <string name="current_games">Current Games</string>
    <string name="search">Search</string>
    <string name="player_scanner">Player Scanner</string>
    <string name="other">Other</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="game_name">Game Name</string>
    <string name="placeholder_num">123</string>
</resources>
