<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current_games"
            android:icon="@drawable/ic_menu_current_games"
            android:title="@string/current_games" />

        <!--<item-->
            <!--android:id="@+id/nav_search"-->
            <!--android:icon="@drawable/ic_menu_search"-->
            <!--android:title="@string/player_scanner" />-->

    </group>

    <group android:id="@+id/group_2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_game"
            android:icon="@drawable/ic_menu_create_game"
            android:title="@string/action_create_game" />
        <item
            android:id="@+id/nav_join_game"
            android:icon="@drawable/ic_menu_join_game"
            android:title="@string/action_join_game" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_menu_log_out"
            android:title="@string/action_log_out" />
    </group>

</menu>
