<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.SplashLoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:padding="30dp">


    <!-- App Title-->
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!-- Logo (scales between input and title) -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAppName"
        android:layout_above="@id/tilUsername"
        app:srcCompat="@drawable/money" />



    <Space
        android:id="@+id/space_center"
        android:layout_width="@dimen/halfViewPadding"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"/>

    <!-- Login Submit (uses inputs) -->
    <Button
        android:id="@+id/bRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/space_center"
        android:layout_alignParentStart="true"
        android:text="@string/register" />


    <!-- Register (go to register page) -->
    <Button
        android:id="@+id/bLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/space_center"
        android:layout_alignParentEnd="true"
        android:text="@string/log_in" />

    <!-- Username -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tilPassword"
        android:textColorHint="@color/colorPrimaryLight">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/username" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bRegister"
        android:layout_marginBottom="@dimen/halfViewPadding"
        android:textColorHint="@color/colorPrimaryLight">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>


</RelativeLayout>